--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,31 +1,185 @@
 ---
-title: "Assessment"
+title: "B223788"
 output: html_document
 date: "2025-10-31"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-boxplot(pressure)
+knitr::opts_chunk$set(echo  = TRUE, message = FALSE, warning = FALSE)
 
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# Building the dataset used for this analysis 
+
+## Full code used for the dataset
+
+```{r dataset-code}
+
+library(tidyverse)  
+library(lubridate)
+library(janitor)
+library(here)
+library(gt)
+library(stringr)
+library(dplyr)
+library(ggplot2)
+
+anti_platelet_drugs <- c(
+  "ASPIRIN","CLOPIDOGREL","PRASUGREL","TICAGRELOR",
+  "DIPYRIDAMOLE","PERSANTIN","PLAVIX","BRILIQUE","EFFIENT"
+)
+anti_rx <- regex(paste(anti_platelet_drugs, collapse = "|"), ignore_case = TRUE)
+
+# Load in the consecutive data (per year)
+
+## YEAR 2018
+files <- list.files(here("data", "consecutive_data_2018"), pattern = "\\.csv$", full.names = TRUE)
+data_2018 <- files %>%
+  map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>%
+  clean_names() %>%
+  filter(str_detect(bnf_item_description, anti_rx)) %>%
+  select(bnf_item_description, paid_quantity, paid_date_month) %>%
+  mutate(year = 2018)
+
+## YEAR 2019
+files <- list.files(here("data", "consecutive_data_2019"), pattern = "\\.csv$", full.names = TRUE)
+data_2019 <- files %>%
+  map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>%
+  clean_names() %>%
+  filter(str_detect(bnf_item_description, anti_rx)) %>%
+  select(bnf_item_description, paid_quantity, paid_date_month) %>%
+  mutate(year = 2019)
+
+## YEAR 2020
+files <- list.files(here("data", "consecutive_data_2020"), pattern = "\\.csv$", full.names = TRUE)
+data_2020 <- files %>%
+  map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>%
+  clean_names() %>%
+  filter(str_detect(bnf_item_description, anti_rx)) %>%
+  select(bnf_item_description, paid_quantity, paid_date_month) %>%
+  mutate(year = 2020)
+
+## YEAR 2021
+files <- list.files(here("data", "consecutive_data_2021"), pattern = "\\.csv$", full.names = TRUE)
+data_2021 <- files %>%
+  map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>%
+  clean_names() %>%
+  filter(str_detect(bnf_item_description, anti_rx)) %>%
+  select(bnf_item_description, paid_quantity, paid_date_month) %>%
+  mutate(year = 2021)
+
+## YEAR 2022
+files <- list.files(here("data", "consecutive_data_2022"), pattern = "\\.csv$", full.names = TRUE)
+data_2022 <- files %>%
+  map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>%
+  clean_names() %>%
+  filter(str_detect(bnf_item_description, anti_rx)) %>%
+  select(bnf_item_description, paid_quantity, paid_date_month) %>%
+  mutate(year = 2022)
+
+# Combine all 5 datasets
+antiplatelets_2018_2022_combined <- bind_rows(
+  data_2018, data_2019, data_2020, data_2021, data_2022
+)
+
+# Filter/transform 
+anti_platelet_data <- antiplatelets_2018_2022_combined %>%
+  mutate(
+    paid_quantity = suppressWarnings(as.numeric(paid_quantity)),
+    month_date = case_when(
+      str_detect(paid_date_month, "^\\d{6}$") ~ ymd(paste0(paid_date_month, "01")), 
+      str_detect(paid_date_month, "^\\d{4}-\\d{2}$") ~ ym(paid_date_month), 
+      TRUE ~ suppressWarnings(ymd(paid_date_month))
+    )
+  ) %>%
+  select(bnf_item_description, paid_quantity, month_date)
+
+# Group all drugs under general names
+anti_platelet_data <- anti_platelet_data %>%
+  mutate(
+    DrugGroup = case_when(
+      str_detect(bnf_item_description, regex("aspirin",     TRUE)) ~ "Aspirin",
+      str_detect(bnf_item_description, regex("clopidogrel", TRUE)) ~ "Clopidogrel",
+      str_detect(bnf_item_description, regex("ticagrelor",  TRUE)) ~ "Ticagrelor",
+      str_detect(bnf_item_description, regex("prasugrel",   TRUE)) ~ "Prasugrel",
+      str_detect(bnf_item_description, regex("dipyridamole",TRUE)) ~ "Dipyridamole",
+      TRUE ~ "Other"
+    )
+  )
+
+monthly_grouped_data <- anti_platelet_data %>%
+  group_by(month_date, DrugGroup) %>%
+  summarise(paid_quantity = sum(paid_quantity, na.rm = TRUE), .groups = "drop")
+
+# Separate by month and year
+anti_platelet_data <- anti_platelet_data %>%
+  mutate(
+    Year  = year(month_date),
+    Month = month(month_date, label = TRUE, abbr = TRUE)
+  )
+
+monthly_yearly_data_summary <- anti_platelet_data %>%
+  group_by(Year, Month, DrugGroup) %>%
+  summarise(Total_Paid = sum(paid_quantity, na.rm = TRUE), .groups = "drop")
+
+```
+
+# Data analysis and visualisation 
+
+## Figure 1 
+
+```{r figure-1, fig.width=10}
+
+monthly_yearly_data_summary <- monthly_yearly_data_summary %>%
+  mutate(Month = factor(Month, levels = month.abb, ordered = TRUE))
+
+monthly_yearly_data_summary_plot <- monthly_yearly_data_summary %>% 
+  ggplot(aes(x = Month, y = Total_Paid, color = DrugGroup)) +
+  geom_line(aes(group = interaction(Year, DrugGroup))) +
+  facet_wrap(~ Year, scales = "free_y") +
+  scale_x_discrete(drop = FALSE) +
+  labs(title = "Monthly anti-platelet prescribing by year",
+       y = "Paid quantity", x = "Month") +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1),
+    plot.title = element_text(hjust = 0.5)
+  )
+
+print(monthly_yearly_data_summary_plot)
+
+
+```
+
+## Figure 2 - table 
+
+```{r figure-2, fig.width=10}
+
+library(glue)
+prescription_per_year <- monthly_yearly_data_summary %>%
+  group_by(Year,DrugGroup) %>%
+  summarise(total_paid = sum(Total_Paid, na.rm = TRUE), .groups = "drop") %>%
+  pivot_wider(names_from = DrugGroup, values_from = total_paid, values_fill = 0) %>% 
+  gt() %>% 
+  cols_move(columns = "Other", 
+            after = c("Ticagrelor")) %>% 
+   fmt_number(columns = c(Aspirin, Clopidogrel, Dipyridamole, Prasugrel, Ticagrelor, Other), decimals = 2) %>% 
+  cols_align(align = "center",
+             columns = c(Aspirin, Clopidogrel, Other)) %>% 
+  data_color(
+    columns = c(Aspirin, Clopidogrel, Dipyridamole, Prasugrel, Ticagrelor, Other),
+    colors = scales::col_numeric(
+      palette = c("#e0f3f8", "#abd9e9", "#74add1", "#4575b4"), 
+      domain = NULL
+    )
+  ) %>% 
+  tab_header(
+       title = "Anti-platelet prescribing by year",
+       subtitle = glue("Paid Quantity of drugs, 2018-2022")) 
+
+prescription_per_year
+
+
+
+```
+
+
