--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Investigation into the impact of COVID-19 pandemic on the prescription of anti-coagulant medication in Scotland"
+name: "B223788"
 date: "2025-11-14"
 output:
   html_document
@@ -13,10 +14,6 @@ knitr::opts_chunk$set(echo  = TRUE, message = FALSE, warning = FALSE)
 ### Aim
 
 This report aims to investigate whether there has been a change in the prescribing trends of anticoagulant medications in Scotland before, during and after the COVID-19 pandemic. Specifically, this investigation focuses on 5 different anticoagulant drugs and analyses how their prescription patterns may have changed across the years of 2018-2022.  
-
-
-# Methods 
-
 For this analysis, open prescribing data from Public Health Scotland (2018-2022) and daily COVID-19 admission data (Public Health Scotland, 2020-2022) will be used. 
 For the prescribing data, data containing the following anticoagulant names and their corresponding brand-names (Warfarin, Heparin, Apixaban, Rivaroxaban, and Edoxaban) were selected and grouped by month and year. These 5 were specifically selected as they are the most widely-known.
 
@@ -98,10 +95,7 @@ monthly_yearly_data_summary <- monthly_yearly_data_summary %>%
 
 ```
 
-# Data analysis & visualisation 
-
 ## Figure 1. Monthly trends in anticoagulant prescribing in Scotland (2018–2022)
-A visible shift in prescribing patterns is observed over time, with Warfarin prescriptions declining and the use of DOACs such as Apixaban and Edoxaban increasing, particularly after the onset of the COVID-19 pandemic in early 2020. 
 
 ```{r figure-1, fig.width=13, fig.height=4.2}
 
@@ -127,7 +121,6 @@ theme(
 )
 
 print(monthly_yearly_data_summary_plot)
-
 ```
 
 # Next steps
