--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo  = TRUE, message = FALSE, warning = FALSE)
 
 ### Aim
 
-This report aims to investigate whether there has been a change in the prescribing trends of anticoagulant medications in Scotland before, during and after the COVID-19 pandemic. Specifically, this investigation focuses on 5 different anticoagulant drugs and analyses how their prescription patterns may have changed across the years of 2018-2022.  
+This report aims to investigate whether there has been a change in the prescribing trends of anticoagulant medications in Scotland before, during and after the COVID-19 pandemic (COVID19 increases the risk of thrombosis). Specifically, this investigation focuses on 5 different anticoagulant drugs and analyses how their prescription patterns may have changed across the years of 2018-2022.  
 For this analysis, open prescribing data from Public Health Scotland (2018-2022) and daily COVID-19 admission data (Public Health Scotland, 2020-2022) will be used. 
 For the prescribing data, data containing the following anticoagulant names and their corresponding brand-names (Warfarin, Heparin, Apixaban, Rivaroxaban, and Edoxaban) were selected and grouped by month and year. These 5 were specifically selected as they are the most widely-known.
 
@@ -28,20 +28,22 @@ library(stringr)
 library(dplyr)
 library(ggplot2)
 
+#Define list of anticoagulant drugs
 anti_coagulant_drugs <- c(
   "WARFARIN","HEPARIN","APIXABAN","RIVAROXABAN",
   "EDOXABAN","ELIQUIS","XARELTO","LIXIANA"
 )  #Eliquis is a brand name for apixaban, Xarelto is a brand name for rivaroxaban, lixiana is a brand name for edoxaban. This inclusion increases the number of data in the analysis, making the visualizations and interpretations more meaningful. 
+
+#Creating a regular expression that acts as a search filter for the drugs
 anti_rx <- regex(paste(anti_coagulant_drugs, collapse = "|"), ignore_case = TRUE)
 
 # Creating a function to load all consecutive years at once
-
 read_prescriptions_year <- function(year, root = "data") {
   folder <- here(root, paste0("consecutive_data_", year))
   files  <- list.files(folder, pattern = "\\.csv$", full.names = TRUE)
 
   files %>%
-    map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>%
+    map_dfr(~ read_csv(.x, show_col_types = FALSE, progress = FALSE)) %>% #binding all files together in a single dataframe
     clean_names() %>%
     filter(str_detect(bnf_item_description, anti_rx)) %>%   
     select(bnf_item_description, paid_quantity, paid_date_month) %>%
@@ -55,9 +57,9 @@ anti_coagulant_data <- map_dfr(2018:2022, read_prescriptions_year)
 # Filter and transform the data 
 anti_coagulant_data <- anti_coagulant_data %>%
   mutate(
-    paid_quantity = suppressWarnings(as.numeric(paid_quantity)),
+    paid_quantity = suppressWarnings(as.numeric(paid_quantity)), #convert paid_quantity variable in a numeric form 
     month_date = case_when(
-      str_detect(paid_date_month, "^\\d{6}$") ~ ymd(paste0(paid_date_month, "01")), # allows formattingggg of the "Date" column to be consistent
+      str_detect(paid_date_month, "^\\d{6}$") ~ ymd(paste0(paid_date_month, "01")), # allows formatting of the "Date" column to be consistent
       str_detect(paid_date_month, "^\\d{4}-\\d{2}$") ~ ym(paid_date_month), 
       TRUE ~ suppressWarnings(ymd(paid_date_month))
     )
@@ -73,10 +75,10 @@ anti_coagulant_data <- anti_coagulant_data %>%
       str_detect(bnf_item_description, regex("apixaban",  TRUE)) ~ "Apixaban",
       str_detect(bnf_item_description, regex("rivaroxaban",   TRUE)) ~ "Rivaroxaban",
       str_detect(bnf_item_description, regex("Edoxaban",TRUE)) ~ "Edoxaban",
-      TRUE ~ "Other" #the rest of the drugs in the dataset, can be used to visualize how the trends in anti-coagulants specifically changed, compared to other medicines over the years.  
+      TRUE ~ "Other" #the rest of the drugs in the dataset, can be used to visualize how the trends in anti-coagulants specifically changed, compared to other medicines over the years. Could be removed??
     )
   )
-
+#Aggregate monthly totals 
 monthly_grouped_data <- anti_coagulant_data %>%
   group_by(month_date, DrugGroup) %>%
   summarise(Total_Quantity_Dispensed = sum(paid_quantity, na.rm = TRUE), .groups = "drop")
@@ -100,7 +102,7 @@ monthly_yearly_data_summary <- monthly_yearly_data_summary %>%
 ```{r figure-1, fig.width=13, fig.height=4.2}
 
 monthly_yearly_data_summary <- monthly_yearly_data_summary %>%
-  mutate(Month = factor(Month, levels = month.abb, ordered = TRUE))
+  mutate(Month = factor(Month, levels = month.abb, ordered = TRUE)) #sets the order of the months
 
 monthly_yearly_data_summary_plot <- monthly_yearly_data_summary %>% 
   ggplot(aes(x = Month, y = Total_Quantity_Dispensed, color = DrugGroup)) +
@@ -125,5 +127,5 @@ print(monthly_yearly_data_summary_plot)
 
 # Next steps
 
-Next I want to create a summary table which shows a change in the prescribing trends in anticoagulant medication. I will include a % change for each drug for a deeper analysis. Then I plan on merging this dataset with a daily COVID19 patient admission to investigate a potential relationship between anticoagulant prescribing and COVID19 hospitalisations (this would be my Figure 4). Not sure how large the discussion and conclusion section should be?
+Next I want to create a summary table which shows a change in the prescribing trends in anticoagulant medication. I will include a % change for each drug for a deeper analysis. Not sure if I should keep the 'Other' drugs in the analysis. Then I plan on merging this dataset with a daily COVID19 patient admission to investigate a potential relationship between anticoagulant prescribing and COVID19 hospitalisations (this would be my Figure 4). Not sure how large the discussion and conclusion section should be?
 
