--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Investigation into the impact of COVID-19 pandemic on the prescription of anti-coagulant medication in Scotland"
-name: "B223788"
+author: "B223788"
 date: "2025-11-14"
 output:
-  html_document
+  html_document:
+    code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
